# tclib3

./: .gitignore  LICENSE.md  __init__.py  helpers.py  main.py  pyproject.toml  readme.md  setup.py  test.py
src/: __init__.py  helpers.py  main.py
src/tclib3/: __init__.py  main.py
tclib3/: __init__.py  helpers.py  main.py
testing/: test.py  test_full_3hr_df.py  test_tclib3.py  testdata.py
