[tool.poetry]
name = "tclib3"
version = "1.0.2"
description = "A timecode utility library."
authors = ["Emmanuel Acosta <pixelomen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
